--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Chris: custom ignores:
+ui-mock-ups/*
+
 # compiled output
 /dist
 /tmp
